maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: '=' expected but '(' found.
def DetectBiscuit():Array[Int](2)={
                              ^JediEscaper:21: error: illegal start of simple expression
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^